defined the best month's sales and the amount

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "id": "05234a2a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "id": "a8e4e6de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "id": "8bfd2652",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "      <td>295665</td>\n",
        "      <td>Macbook Pro Laptop</td>\n",
        "      <td>1</td>\n",
-       "      <td>1700</td>\n",
+       "      <td>1700.00</td>\n",
        "      <td>12/30/19 00:01</td>\n",
        "      <td>136 Church St, New York City, NY 10001</td>\n",
        "      <td>12</td>\n",
@@ -362,7 +362,7 @@
        "      <td>295666</td>\n",
        "      <td>LG Washing Machine</td>\n",
        "      <td>1</td>\n",
-       "      <td>600.0</td>\n",
+       "      <td>600.00</td>\n",
        "      <td>12/29/19 07:03</td>\n",
        "      <td>562 2nd St, New York City, NY 10001</td>\n",
        "      <td>12</td>\n",
@@ -402,22 +402,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Order ID               Product Quantity Ordered Price Each      Order Date  \\\n",
-       "0   295665    Macbook Pro Laptop                1       1700  12/30/19 00:01   \n",
-       "1   295666    LG Washing Machine                1      600.0  12/29/19 07:03   \n",
-       "2   295667  USB-C Charging Cable                1      11.95  12/12/19 18:21   \n",
-       "3   295668      27in FHD Monitor                1     149.99  12/22/19 15:13   \n",
-       "4   295669  USB-C Charging Cable                1      11.95  12/18/19 12:38   \n",
+       "  Order ID               Product  Quantity Ordered  Price Each  \\\n",
+       "0   295665    Macbook Pro Laptop                 1     1700.00   \n",
+       "1   295666    LG Washing Machine                 1      600.00   \n",
+       "2   295667  USB-C Charging Cable                 1       11.95   \n",
+       "3   295668      27in FHD Monitor                 1      149.99   \n",
+       "4   295669  USB-C Charging Cable                 1       11.95   \n",
        "\n",
-       "                         Purchase Address  Month  \n",
-       "0  136 Church St, New York City, NY 10001     12  \n",
-       "1     562 2nd St, New York City, NY 10001     12  \n",
-       "2    277 Main St, New York City, NY 10001     12  \n",
-       "3     410 6th St, San Francisco, CA 94016     12  \n",
-       "4           43 Hill St, Atlanta, GA 30301     12  "
+       "       Order Date                        Purchase Address  Month  \n",
+       "0  12/30/19 00:01  136 Church St, New York City, NY 10001     12  \n",
+       "1  12/29/19 07:03     562 2nd St, New York City, NY 10001     12  \n",
+       "2  12/12/19 18:21    277 Main St, New York City, NY 10001     12  \n",
+       "3  12/22/19 15:13     410 6th St, San Francisco, CA 94016     12  \n",
+       "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,6 +555,48 @@
    "source": [
     "all_data['Sales'] = all_data['Quantity Ordered'] * all_data['Price Each']\n",
     "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 1: What was the best month for sales? How much was earned that month?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = all_data.groupby('Month').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/pernebayarailym/Documents/Portfolio Projects AP/Python Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb Cell 17\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X35sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m months \u001b[39m=\u001b[39m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m13\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mbar(months, results[\u001b[39m'\u001b[39m\u001b[39mSales\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/pernebayarailym/Documents/Portfolio%20Projects%20AP/Python%20Projects/Project_9_DataScience_Pandas/Sales_Analysis_Jup.ipynb#X35sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "months = range(1,13)\n",
+    "\n",
+    "plt.bar(months, results['Sales'])\n",
+    "plt.show()"
    ]
   }
  ],
